css fix for static-page layout issue in IE, and fixes for user action options (creating and deleting pages and images) icons positionioning

--- a/portal/src/main/webapp/theme/cw/css/screen.css
+++ b/portal/src/main/webapp/theme/cw/css/screen.css
@@ -664,7 +664,7 @@ a.disabled {
     padding: .5em;
 }
 
-#admin-block .ui-icon{
+table.user-options .ui-icon{
     float:left;
     margin:0 .25em 0 0;
 }
